--- a/src/components/home/section/ImageSection.css
+++ b/src/components/home/section/ImageSection.css
@@ -45,7 +45,6 @@
   .text-column {
     flex: 1 1 100%;
     padding: 10px;
-    padding-left: 20px;
   }
 
   .section-title {
@@ -56,6 +55,7 @@
 
   .section-content {
     font-size: 16px;
+    text-align: justify;
   }
 
   .image-column {
